# crypto_decision_support_starter

./: .gitignore  .pre-commit-config.yaml  README.md  README_CALIBRATION.txt  pyproject.toml
app/: cli.py  streamlit_app.py
configs/: backtest.yaml  data.yaml  features.yaml  model.yaml  strategy_confidence.yaml  strategy_confidence_ls.yaml
notebooks/: eda_altcoins.py
scripts/: build_predictions_vs_price.py  plot_predictions_vs_price.py  predict_future_lgbm.py  run-all.ps1  tune_confidence_long.py  tune_confidence_long_short.py
src/backtest/: compare_baselines_vs_calibrated.py  core.py  run_altcoins.py  run_calibrated.py  run_confidence_long.py  run_confidence_long_short.py  strategies.py
src/data/: download.py  qa.py
src/features/: sanity.py  tech.py
src/models/: calibrate_thresholds.py  inspect_calibration.py  train_lgbm_altcoins.py
src/strategies/: confidence_long.py  confidence_long_short.py  proba_calibrated.py
src/validation/: walk_forward.py
tests/: test_core.py  test_features_target.py  test_sanity_in_train.py  test_smoke_train.py  test_strategies_confidence.py
